--- a/includes/custom.css
+++ b/includes/custom.css
@@ -74,7 +74,7 @@
     text-decoration: none;
     color: #ef961d !important;
 }
-.image-block__item a:hover {
+.image-block__item:hover a{
     color: #fff !important;
 }
 .image-block>.container {
@@ -91,5 +91,9 @@
 }
 .image-block__icon {
     position: relative;
-    left: 30%;
+    left: 35%;
+}
+.image-block__title, .image-block__text{
+    font-family: "Montserrat", Helvetica, Arial, sans-serif !important;
+    font-weight:700;
 }
