--- a/includes/button-style.css
+++ b/includes/button-style.css
@@ -21,7 +21,7 @@
     right: 0;
     top: 300px;
     z-index: 999;
-    padding-bottom: 82px;
+    padding-bottom: 97px;
     /* filter: drop-shadow(0px 8px 15px #00000042); */
   }
   
@@ -124,12 +124,12 @@
     display: inline-block;
     position: absolute;
     left: 0;
-    bottom: -45px;
+    bottom: -47px;
     transform-origin: top left;
     font-size: 14px;
     background-color: rgb(0 0 0 / 30%);
     line-height: 40px;
-    padding: 0 0 0 10px;
+    padding: 0 10px 0 10px;
     /* border-radius: 8px 0 0; */
     transition: left 0.2s; /* box-shadow: 0 8px 15px 0px #00000042; */
   /*   -webkit-backdrop-filter: blur(8px); */
@@ -185,6 +185,14 @@
       right: 40px;
     height: 45px;
   }
+  @media not all and (min-resolution:.001dpcm) { 
+    @media {
+      .shortcut-tab-label {
+        bottom: -50px;
+       
+      }
+    }
+}
   @media only screen and (min-width: 768px) {
     .lean-six-sigma-shortcuts-tab {
       top: 300px;
@@ -201,7 +209,8 @@
   }
   @media only screen and (max-width: 767px){
   .quick-contact__title {
-    right: 0px;
+     display: none;
+    /* right: 0px;
     top:0px;
       -webkit-transform: rotate(-90deg);
       -ms-transform: rotate(-90deg);
@@ -213,7 +222,7 @@
       bottom: 0px !important;
       width: 100% !important;
       transform: rotate(0deg);
-      position: relative !important;
+      position: relative !important; */
   }
   }
   @media only screen and (min-width: 1024px) {
@@ -268,6 +277,12 @@
     .lean-six-sigma-shortcuts-tab {
       top: 350px;
         height: 229px;
+    }
+  }
+
+  @media only screen and (max-width: 720px) {
+    .shortcut-tab-label {
+      bottom: -67px;
     }
   }
   .icon-arrow-left:before, .slick-box-icon-text-prev:before, .quick-contact__row-right:before {
